# parakeetv2API

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONFIG.md  DEPLOYMENT.md  Dockerfile  README-Docker.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.py  setup.py
src/: config.py  main.py
src/api/: __init__.py  dependencies.py  middleware.py  rate_limiter.py
src/api/routes/: __init__.py  models.py  transcription.py
src/core/: __init__.py  audio_processor.py  error_handler.py  exceptions.py  logging.py  model_manager.py  monitoring.py
src/models/: __init__.py  requests.py  responses.py
src/services/: __init__.py  audio.py  model.py  transcription.py
src/utils/: __init__.py  validators.py
tests/: conftest.py
tests/audio_files/: test_flac_16000Hz_mono.flac  test_flac_16000Hz_stereo.flac  test_flac_24000Hz_mono.flac  test_flac_24000Hz_stereo.flac  test_flac_48000Hz_mono.flac  test_flac_48000Hz_stereo.flac  test_flac_8000Hz_mono.flac  test_flac_8000Hz_stereo.flac  test_m4a_16000Hz_mono.m4a  test_m4a_16000Hz_stereo.m4a  test_m4a_24000Hz_mono.m4a  test_m4a_24000Hz_stereo.m4a  test_m4a_48000Hz_mono.m4a  test_m4a_48000Hz_stereo.m4a  test_m4a_8000Hz_mono.m4a  test_m4a_8000Hz_stereo.m4a  test_mpeg_16000Hz_mono.mpeg  test_mpeg_16000Hz_stereo.mpeg  test_mpeg_24000Hz_mono.mpeg  test_mpeg_24000Hz_stereo.mpeg  test_mpeg_48000Hz_mono.mpeg  test_mpeg_48000Hz_stereo.mpeg  test_mpeg_8000Hz_mono.mpeg  test_mpeg_8000Hz_stereo.mpeg  test_mpga_16000Hz_stereo.mpga  test_mpga_24000Hz_stereo.mpga  test_mpga_48000Hz_mono.mpga  test_mpga_48000Hz_stereo.mpga  test_mpga_8000Hz_mono.mpga  test_mpga_8000Hz_stereo.mpga  test_webm_16000Hz_mono.webm  test_webm_16000Hz_stereo.webm  test_webm_24000Hz_mono.webm  test_webm_24000Hz_stereo.webm  test_webm_48000Hz_mono.webm  test_webm_48000Hz_stereo.webm  test_webm_8000Hz_mono.webm  test_webm_8000Hz_stereo.webm
tests/e2e/: test_error_cases.py  test_full_pipeline.py  test_transcription_workflow.py
tests/integration/: test_api_routes.py  test_model_integration.py
tests/unit/: test_config.py  test_exceptions.py  test_models.py  test_services.py  test_validators.py
